@@ -364,10 +364,10 @@ Salvage.SubSkill.AdvancedSalvage.Name=Advanced Salvage
 Salvage.SubSkill.AdvancedSalvage.Description=Salvage damaged items
 Salvage.SubSkill.ArcaneSalvage.Name=Arcane Salvaging
 Salvage.SubSkill.ArcaneSalvage.Description=Extract enchantments from items
+Salvage.SubSkill.ArcaneSalvage.Stat=Arcane Salvaging: [[YELLOW]]Rank {0}/{1}
 Salvage.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ADVANCED SALVAGE)
 Salvage.Ability.Bonus.0=Advanced Salvage
 Salvage.Ability.Bonus.1={0} Max Materials Recovered from Salvaging
-Salvage.Arcane.Rank=Arcane Salvaging: [[YELLOW]]Rank {0}/{1}
 Salvage.Arcane.ExtractFull=[[GRAY]]AS Full-Enchant Chance
 Salvage.Arcane.ExtractPartial=[[GRAY]]AS Partial-Enchant Chance
 Salvage.Skills.Success=[[GREEN]]Item salvaged!
