@@ -9,6 +9,8 @@ Key:
 
 Version 2.1.4
     Fixed a bug where Alchemy didn't gain XP
+    Fixed a bug where Archery gained XP from mob spawned entities
+    Fixed Styling for the /salvage command
     Temporarily disabled Flux Mining
     Removed XP from entities that target endermite to prevent easy exploitation (Credits to TheBentoBox for the tip!) [Can be turned off in experience.yml]
     Fixed a bug where static chance skills like Arcane Salvage were using incorrect calculations for success
